--- a/breast.html
+++ b/breast.html
@@ -81,17 +81,21 @@
         <br>
 <!--show the button-->
 <div class="button_cont" align="center">
-<a class="button_css" href="#" target="_blank" rel="nofollow noopener">
-<button type="submit" class="btn btn-primary btn-block btn-large">
-<Strong>Predict Cancer</strong></button>
-</a>
-</form>
-</center>
-<!--Show Predicted Output Using Machine Learning Model---->
-<div>
-<center>
-<h1> {{prediction_text}} </h1>
-</center>
-</div>
+<a class="button_css" href="https://www.linkedin.com/in/kalam-sardar-5469941a3/" target="_blank" rel="nofollow noopener">
+ <button type="submit" class="btn btn-primary btn-block btn-large"><strong>Predict Cancer</strong></button></a>
+        </div>
+        
+    </form>
+    </center>
+   
+   <!-- Show predicted output using ML model --> 
+   <div>
+       <center>
+   <h1>{{ prediction_text }}</h1>
+       </center>
+   </div>
+
+ </div>
+
 </body>
 </html>
